Improve icons layout and fix vertical alignments

--- a/root/static/styles/forms.less
+++ b/root/static/styles/forms.less
@@ -647,6 +647,12 @@ table.artist-credit-editor {
             }
         }
 
+        td.link-actions {
+            button.edit-item {
+                margin-right: 4px !important;
+            }
+        }
+
         a.url:focus-visible {
             outline: revert; // reset to UA stylesheet
         }
